<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.AboutUsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

            <TextView
                android:onClick="back"
                android:layout_width="match_parent"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_arrow_back_black_24dp"
                android:layout_height="wrap_content"
                android:text="@string/about_developer"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"/>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/alaminkarno"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/md_al_amin"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/android_developer"
                            android:textAlignment="center"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_me_tgc"
                            android:textAlignment="center"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:padding="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_app"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content"
                    android:text="Credit"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:padding="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/icon_made_by_freepik_from_www_flaticon_com"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </ScrollView>



    </LinearLayout>



</RelativeLayout>