<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".activity.TeacherLoginActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/userNameET"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edittextbg"
                    android:padding="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/passwordET"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_6_digit"
                    android:inputType="textPassword"
                    android:background="@drawable/edittextbg"
                    android:padding="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/adminloginBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/btnbg"
            android:layout_margin="40dp"/>

    </LinearLayout>

    <TextView
        android:onClick="stduntlogin"
        android:id="@+id/studentLoginTV"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_student_login_here"
        android:textSize="16sp"
        android:textAlignment="center"/>

</RelativeLayout>